# web-engine-benchmarking

./: README.md
json-from-sqlite/go-std-sqlc/: db.go  go.mod  main.go  models.go  query.sql.go  schema.sql  server.go  sqlc.yaml
json-from-sqlite/rust-axum-sqlx/: Cargo.toml
json-from-sqlite/rust-axum-sqlx/src/: main.rs  migrate.sql  server.rs
