[package]
name = "rust-axum-sqlx"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
sqlx = { git ="https://github.com/Arcayr/sqlx.git", branch = "sqlite-date", version = "0.7.0-alpha.3", features = ["runtime-tokio-native-tls", "sqlite", "time"] }
time = { version = "0.3.22", features = ["serde", "parsing", "formatting"] }
tokio = { version = "1.28.2", features = ["full"] }
